<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="415dp"
        android:layout_height="855dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" >

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="54dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="344dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="350dp"
            android:layout_height="328dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/iwonder" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="108dp"
            android:layout_height="107dp"
            android:layout_marginTop="628dp"
            android:layout_marginEnd="152dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/play" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="55dp"
            android:layout_height="53dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="652dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/previouse" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="656dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shuffle" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="55dp"
            android:layout_height="53dp"
            android:layout_marginTop="652dp"
            android:layout_marginEnd="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/next" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="43dp"
            android:layout_height="47dp"
            android:layout_marginTop="656dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/repeat" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="393dp"
            android:layout_height="44dp"
            android:layout_marginTop="572dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/seekbar" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="89dp"
            android:layout_height="36dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="163dp"
            android:text="@string/musicname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="121dp"
            android:layout_height="31dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="147dp"
            android:text="@string/artistname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="121dp"
            android:layout_height="31dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="147dp"
            android:text="@string/albumname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="39dp"
            android:layout_height="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="33dp"
            android:text="@string/musictime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="39dp"
            android:layout_height="20dp"
            android:layout_marginEnd="95dp"
            android:text="@string/musicseektime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="58dp"
            android:layout_height="25dp"
            android:layout_marginStart="215dp"
            android:layout_marginTop="43dp"
            android:text="@string/lyrics"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="58dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="43dp"
            android:text="@string/relatedmusic"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="415dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:background="@color/accentcolor"
        android:backgroundTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="151dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logowithname2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>